k8s/infra/kube-prometheus-stack/rendered/kube-prometheus-stack/prometheus-operator/admission-webhooks/mutatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app: prom-admission
    app.kubernetes.io/component: prometheus-operator-webhook
    app.kubernetes.io/instance: kube-prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: prom-prometheus-operator
    app.kubernetes.io/part-of: prom
    app.kubernetes.io/version: 88.3.0
    chart: kube-prometheus-stack-88.3.0
    heritage: Helm
    release: kube-prometheus-stack
  name: kube-prom-admission
  namespace: kube-prometheus-stack-system
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: kube-prom-operator
      namespace: kube-prometheus-stack-system
      path: /admission-prometheusrules/mutate
  failurePolicy: Ignore
  name: prometheusrulemutate.monitoring.coreos.com
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - prometheusrules
  sideEffects: None
  timeoutSeconds: 10
